--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 945px;
+    height: 1000px;
     text-align:end;
     align-items: center;
     display: flex;
@@ -35,4 +35,126 @@ header{
     color: #005FAC;
     font-size: 20px;
     font-weight: 600;
+}
+.main-container{
+    margin: 150px 0;
+}
+.section-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 200px;
+}
+.section-container-text{
+    width: 500px;
+}
+.section-container-text h3{
+    font-size: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 800;
+    width: 320px;
+    margin-bottom: 0;
+}
+.section-container-text p{
+    font-size: 22px;
+}
+.plan-section{
+    margin-top: 100px;
+}
+.plan-header{
+    font-size: 35px;
+    text-align: center;
+}
+.plan-items{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    gap: 100px;
+    margin: 0 auto;
+    padding: 50px 20px;
+    border-radius: 5px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px 8px rgb(137, 180, 219);
+    width: 80%;
+}
+.plan-item{
+    text-align: center;
+}
+.plan-icon{
+    margin-bottom: 10px;
+}
+.plan-item-text{
+    margin-bottom: 0;
+    font-size: 35px;
+    font-weight:800;
+    margin-top: 0;
+}
+.plan-item-description{
+    margin-top:5px;
+    color: #a38989;
+    font-size: 20px;
+}
+.final-section{
+    width: 70%;
+    margin: 0 auto;
+    background-image:url('../images/gradient1.png'),url('../images/watch.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    border-radius: 5px;
+}
+.final-section-container{
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    padding:60px 0 0px 100px;
+    margin-top: 100px;
+}
+.final-section-container-text{
+    font-size: 45px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    color: azure;
+    width: 500px;
+    margin-bottom: 20px;
+}
+footer{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    background-color: black;
+    color: azure;
+    height: 600px;
+}
+.part-1{
+    width: 50%;
+}
+.part-1-text{
+    font-size: 35px;
+    font-weight: 700;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 5px;
+}
+.part-1-description{
+    width: 400px;
+}
+.email{
+    background: none;
+    color: white;
+    display: block;
+    padding: 20px 50px;
+    border: 1px solid wheat;
+    outline: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.submit{
+    background: rgb(26, 110, 167);
+    color: white;
+    font-size: 20px;
+    padding: 20px 40px;
+    border-radius: 5px;
+    margin-top: 10px;
 }
